# tw-gov-overseas-trip-kit

./: .gitignore  CHANGELOG.md  CITATIONS.md  DISCLAIMER.md  LICENSE  NOTICE.md  PROVENANCE.md  README.md  README_EN.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  consistency.yml
calc/: flight_rank.py  per_diem.py
docs/: 延返與個案指引.md
docs/sources/: README.md
examples/: 01-blank-template.trip.json  02-sample-agency.trip-finance.json  02-sample-agency.trip.json  README.md
render/: docx_fonts.py  render_docx.py  render_finance_xlsx.py  render_flight_options.py  render_html.py  validators.py
render/templates/: pre_trip.html
schema/: trip-finance.schema.json  trip.schema.json
scripts/: check_consistency.py  check_metadata.sh  check_no_pii.sh  extra-denylist.example.txt
tests/: test_disclaimer_layers.py  test_docx_fonts.py  test_examples_valid.py  test_flight_rank.py  test_integration.py  test_per_diem_calc.py  test_render_docx.py  test_render_finance_xlsx.py  test_render_flight_options.py  test_render_html.py  test_render_review_table.py  test_schema_finance.py  test_schema_trip.py  test_validators.py
